code: fix info-popup conversion issue with z-index
The z index of the info popup was below the cards. This is another one
of those card pain points, so I rebuilt these to be completely custom.

--- a/src/components/dev-token-list/_styles.scss
+++ b/src/components/dev-token-list/_styles.scss
@@ -28,8 +28,8 @@
   padding-left: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
-  margin-right: 10px;
 }
+.token-list-header-title { display: flex; }
 .token-list-description-link {
   margin-top: 10px;
   display: block;
